[package]
name = "ban-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ban_rs"
path = "src/main.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
clap = { version = "4.5.1", features = ["derive"] }
once_cell = "1.19.0"
toml = "0.8.15"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "=0.30.13"
regex = "1.10.5"
redis = {version = "0.26.0", features = ["aio"]}
libc = "0.2.155"
chrono = "0.4.38"
